--- a/views/pages/calorieCalculator.ejs
+++ b/views/pages/calorieCalculator.ejs
@@ -1,9 +1,9 @@
 <main class="gradiant-img-background-2">
   <div id="tabs">
-    <!-- <ul>
+    <ul>
       <li class="tabs01"><a href="#tabs-1">Calculations</a></li>
       <li class="tabs02"><a href="#tabs-2">Profile</a></li>
-    </ul> -->
+    </ul>
     <div id="tabs-1">
       <section id="calorie-card">
         <div id="form-calories">
@@ -36,7 +36,7 @@
       </section>
     </div>
 
-    <!-- <div id="tabs-2">
+    <div id="tabs-2">
       <section id="profile-card">
         <div class="human-body">
           <svg data-position="head" class="head" xmlns="http://www.w3.org/2000/svg" width="56.594" height="95.031" viewBox="0 0 56.594 95.031"><path d="M15.92 68.5l8.8 12.546 3.97 13.984-9.254-7.38-4.622-15.848zm27.1 0l-8.8 12.546-3.976 13.988 9.254-7.38 4.622-15.848zm6.11-27.775l.108-11.775-21.16-14.742L8.123 26.133 8.09 40.19l-3.24.215 1.462 9.732 5.208 1.81 2.36 11.63 9.72 11.018 10.856-.324 9.56-10.37 1.918-11.952 5.207-1.81 1.342-9.517zm-43.085-1.84l-.257-13.82L28.226 11.9l23.618 15.755-.216 10.37 4.976-17.085L42.556 2.376 25.49 0 10.803 3.673.002 24.415z"/></svg>
@@ -91,7 +91,7 @@
           <img src="img/logo.png">
         </div>
       </section>
-    </div> -->
+    </div>
   </div>
   
 </main>
